# gateway

./: .dockerignore  .gitignore  CODE_READING_GUIDE.md  DEVELOPER_GUIDE.md  K8S_DEPLOYMENT_GUIDE.md  Makefile  README.md  TROUBLESHOOTING_GUIDE.md  architecture_analysis.md  deep_analysis_report.md  distributed_vector_guide.md  docker-compose.yml  future_roadmap.md  go.mod  implementation_plan.md  run_all.ps1  test_output.txt  wasm_integration_guide.md
.github/workflows/: cd-gitops.yml  ci.yml
.omc/: project-memory.json
.omc/sessions/: 20c94a85-f697-4d3e-b27b-4ecf5af3cbc9.json  3fbaaed0-1ef4-4047-88fe-0f21d69569fa.json  83d6e55e-8670-4983-b520-018c872c016b.json  d818efbe-a7ec-44de-814c-883640ab2c10.json  dbd6127f-93a5-45b1-a931-f26a7b155138.json
configs/: policies.yaml  sensitive.txt
core-go/: .env.example  ARCHITECTURE_BOUNDARIES.md  CI_ENFORCEMENT.md  Dockerfile  go.mod  go.sum  test_output.txt
core-go/cmd/demo/: demo_plugin_vision.go
core-go/cmd/gateway/: bootstrap.go  grpc_security.go  main.go  smoke_test_v2.go  smoke_test_v2_test.go
core-go/cmd/proto_descriptor/: main.go
core-go/configs/: policies.yaml
core-go/configs/adapters/: claudev3.yaml
core-go/dashboard/: index.html
core-go/internal/adapters/: dynamic.go  dynamic_test.go  embeddings.go  loader.go  loader_test.go  protocol.go  protocol_anthropic.go  protocol_anthropic_test.go  protocol_gemini.go  protocol_ollama.go  protocol_openai.go  protocol_openai_compatible.go  provider.go  provider_test.go  rerank.go
core-go/internal/cache/: context_store.go  redis_perf_test.go  vector_store.go
core-go/internal/config/: config.go  config_test.go
core-go/internal/db/: cost_engine.go  init.go  models.go  tenant_manager.go
core-go/internal/dependencies/: facade.go  facade_test.go
core-go/internal/handlers/: admin.go  admin_test.go  billing.go  chat.go  chat_pipeline_test.go  chat_stream_test.go  chat_test.go  rerank.go  smoke_integration_test.go  tenant_admin.go  test_err.txt
core-go/internal/middleware/: auth.go  auth_test.go  quota.go  ratelimit.go  ratelimit_test.go  requestid.go  tool_auth.go
core-go/internal/nitro/: client.go  nitro_service.go  wasm_client.go  wasm_test.go
core-go/internal/observability/: audit_logger.go  nitro_service.go  observability.go  wasm_client.go  wasm_test.go
core-go/test/: e2e_stress_test.go  hot_reload_test.go
k8s/: MONITORING.md  base.yaml  gateway-all-in-one.yaml  intelligence.yaml  nitro.yaml  orchestration.yaml  prometheus-rules.yaml  redis.yaml  servicemonitor.yaml
logic-python/: Dockerfile  README.md  SERVICE_CONTRACT.md  gateway_pb2.py  gateway_pb2_grpc.py  main.py  prompt_injection.py  pyproject.toml  requirements.txt  test_cache.py  test_prompt_injection.py
proto/: COMPATIBILITY.md  gateway.proto
scripts/: verify_proto_sync.py
tmp/pdfs/: generate_app_summary_pdf.py
utils-rust/: BOUNDARY.md  Cargo.toml  Dockerfile  build.rs
utils-rust/src/: lib.rs  main.rs  slm_scanner.rs
(+36 files in other folders)
