[package]
name = "utils-rust"
version = "0.1.0"
edition = "2021"

[dependencies]
tonic = "0.12"
prost = "0.13"
tokio = { version = "1.0", features = ["full"] }
regex = "1.10"
tiktoken-rs = "0.9.1"
log = "0.4.29"
env_logger = "0.11.9"
once_cell = "1.21.3"
dotenv = "0.15.0"
notify = "6.1.1"
arc-swap = "1.7.1"

[build-dependencies]
tonic-build = "0.12"
