[package]
name = "utils-rust"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["service"]
service = ["tonic", "tokio", "prost", "env_logger", "dotenv", "notify", "tonic-build"]

[dependencies]
# Core 依赖 (Wasm 兼容)
regex = "1.10"
tiktoken-rs = "0.12"
once_cell = "1.19"
arc-swap = "1.7.1"
log = "0.4.29"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[profile.release]
panic = "abort"

[profile.dev]
panic = "abort"

# Service 依赖 (限制为可选)
tonic = { version = "0.12", optional = true }
prost = { version = "0.13", optional = true }
tokio = { version = "1.0", features = ["full"], optional = true }
env_logger = { version = "0.11.9", optional = true }
dotenv = { version = "0.15.0", optional = true }
notify = { version = "6.1.1", optional = true }

[build-dependencies]
tonic-build = { version = "0.12", optional = true }
