[package]
name = "utils-rust"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["service"]
service = ["tonic", "tokio", "prost", "env_logger", "dotenv", "notify", "tonic-build"]

[dependencies]
# Core 依赖 (Wasm 兼容)
regex = "1.10"
tiktoken-rs = "0.9.1"
once_cell = "1.21.0"
log = "0.4.29"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
fancy-regex = "0.13.0"


# Service 依赖 (限制为可选)
tonic = { version = "0.12", optional = true }
prost = { version = "0.13", optional = true }
tokio = { version = "1.0", features = ["full"], optional = true }
env_logger = { version = "0.11.9", optional = true }
dotenv = { version = "0.15.0", optional = true }
notify = { version = "6.1.1", optional = true }

[build-dependencies]
tonic-build = { version = "0.12", optional = true }

[profile.release]
panic = "abort"

[profile.dev]
panic = "abort"
opt-level = 0

[profile.dev.package.fancy-regex]
opt-level = 3

[profile.dev.package.tiktoken-rs]
opt-level = 3
